# NumgleAsm

./: Cargo.toml  data.json
src/: datagen.rs  main.rs
src/numgle/: mod.rs  numgle.s
