[package]
name = "NumgleAsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
global_asm = []

[[bin]]
name = "datagen"
path = "src/datagen.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "3"